Agregué map(get), mixins, y usé un extend, ademas de mejorar el Seo

--- a/scss/_auxiliar.scss
+++ b/scss/_auxiliar.scss
@@ -1,1 +1,8 @@
-$color-background: rgb(215, 165, 165);
+$color-background: antiquewhite;
+
+$estilos:(
+    color: antiquewhite,
+    alineacion: center,
+    relleno: 1rem,
+    borde: 2px solid brown
+)
