Proyecto final, ordené los grids y elegí una mejor paleta de color

--- a/scss/_auxiliar.scss
+++ b/scss/_auxiliar.scss
@@ -1,7 +1,9 @@
-$color-background: antiquewhite;
+$color-background: #ffd9ce;
+$color-brandy:#8c4843;
+$color-frio:#91b7c7;
 
 $estilos:(
-    color: antiquewhite,
+    color: #ffd9ce,
     alineacion: center,
     relleno: 1rem,
     borde: 1px solid brown
